добавена основа соля PageObject внесены изменения в распознание состояния GameModes, в связи с новым патчем в игре

--- a/GwentBot.GUI/GwentBot.GUI.csproj
+++ b/GwentBot.GUI/GwentBot.GUI.csproj
@@ -34,6 +34,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'UnitTestsRun|AnyCPU'">
+    <OutputPath>bin\UnitTestsRun\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
