--- a/GwentBot/GwentBot.csproj
+++ b/GwentBot/GwentBot.csproj
@@ -86,7 +86,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="PageObjects\Elements\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="ComputerVision\PatternsForCV\CoinTossStates\CoinLost.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
