добавлены 5 новых класса PageObject, и часть тестов к ним FriendlyGameMatchSettingsPage, GameModesPage, GameSessionPage, RewardsTabPage, NotificationsElement

--- a/GwentBot.Tests/GwentBot.Tests.csproj
+++ b/GwentBot.Tests/GwentBot.Tests.csproj
@@ -68,7 +68,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ComputerVision\OpenCVGwentStateCheckerTests.cs" />
+    <Compile Include="PageObjects\ArenaModePageTests.cs" />
     <Compile Include="PageObjects\MainMenuPageTests.cs" />
+    <Compile Include="PageObjects\FriendlyGameMatchSettingsPageTests.cs" />
+    <Compile Include="PageObjects\GameSessionPageTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
