добавлен элемент NotificationsElement на MainMenuPage; добавлено состояние и функционал распознание состояния FriendlyGameStartStates.CancelGameMessageBox, и тысты к нему; изменен метод отмены дружеской игры в FriendlyGameMatchSettingsPage, теперь он поддерживает новое состояние; изменен паттерн распознания FriendlyDuel, в связи с игровым обновлением.

--- a/GwentBot/GwentBot.csproj
+++ b/GwentBot/GwentBot.csproj
@@ -146,6 +146,9 @@
     <Content Include="ComputerVision\PatternsForCV\GlobalGameStates\MainMenu-OutButton.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="ComputerVision\PatternsForCV\Notifications\CancelGameMessageBox.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="ComputerVision\PatternsForCV\Notifications\FriendlyDuel.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
