--- a/GwentBot.Tests/GwentBot.Tests.csproj
+++ b/GwentBot.Tests/GwentBot.Tests.csproj
@@ -214,6 +214,9 @@
     <Content Include="ComputerVision\GlobalGameStates\MainMenuSrc.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="ComputerVision\Notifications\CancelGameMessageBoxSrc.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="ComputerVision\Notifications\FriendlyDuelSrc.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
