добавлен класс MulliganPage инициирующий модель Game; в GameSessionPage добавлена возможность сдаваться; созданы пустые классы для таблиц со статистикой после игры; обновлены изображения Src и Patterns в связи с патчем в игре;

--- a/GwentBot.Tests/GwentBot.Tests.csproj
+++ b/GwentBot.Tests/GwentBot.Tests.csproj
@@ -154,7 +154,13 @@
     <Content Include="ComputerVision\GameModesTab\SkelligeTable.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="ComputerVision\GameSessionStates\EndMulliganMessageBoxSrc.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="ComputerVision\GameSessionStates\EnemyTurnPlaySrc.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ComputerVision\GameSessionStates\GiveUpMessageBoxSrc.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="ComputerVision\GameSessionStates\LosingAlertSrc.png">
@@ -214,7 +220,7 @@
     <Content Include="ComputerVision\GlobalGameStates\MainMenuSrc.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="ComputerVision\Notifications\CancelGameMessageBoxSrc.png">
+    <Content Include="ComputerVision\FriendlyGameStartStates\CancelGameMessageBoxSrc.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="ComputerVision\Notifications\FriendlyDuelSrc.png">
