--- a/GwentBot.Tests/GwentBot.Tests.csproj
+++ b/GwentBot.Tests/GwentBot.Tests.csproj
@@ -228,6 +228,15 @@
     <Content Include="ComputerVision\FriendlyGameStartStates\CancelGameMessageBoxSrc.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="ComputerVision\GlobalMessageBoxes\ConnectionLostSrc.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ComputerVision\GlobalMessageBoxes\ErrorConnectingToServiceSrc.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ComputerVision\GlobalMessageBoxes\ErrorSearchingOpponentSrc.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="ComputerVision\Notifications\FriendlyDuelSrc.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
